--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body oncontextmenu="return false;"> 
 <body>
     <div class="container">
+        <div class="col-md-12">
         <div class="form-floating mt-5 mb-3">
             <select class="form-select" id="gameLevels">
                 <option value="0" selected>Select...</option>
@@ -21,7 +22,10 @@
             </select>
             <label>Select Game Level</label>
         </div>
+        </div>
+        <div class="col-auto">
         <div id="grid-container"></div>
+        </div>
         <div id="game-over">
             <h3 id="score"></h3>
             <button class="btn btn-primary" onclick="reloadPage()">Back</button>
