--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mining Game| by Abdul Raheem</title>
+    <title>Minesweeper | by Abdul Raheem</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
     <link href="accests/css/game.css" rel="stylesheet" href="">
@@ -11,9 +11,17 @@
 </head>
 <body oncontextmenu="return false;"> 
 <body>
+    <nav class="navbar bg-dark shadow">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/index.html">
+            <img src="accests/images/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top ">
+            <strong class="text-light">Minesweeper</strong>  
+          </a>
+        </div>
+      </nav>
     <div class="container">
         <div class="col-md-12">
-        <div class="form-floating mt-5 mb-3">
+        <div class="form-floating mt-2 mb-3">
             <select class="form-select" id="gameLevels">
                 <option value="0" selected>Select...</option>
                 <option value="4">Easy</option>
