--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minesweeper | by Abdul Raheem</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="accests/css/game.css" rel="stylesheet" href="">
     <link rel="icon" href="accests/images/logo.png" type="image/x-icon">
 </head>
@@ -20,6 +20,11 @@
         </div>
       </nav>
     <div class="container">
+        <div id="bomb-effect">
+            <div class="bomb-image"></div>
+        </div>
+        
+
         <div class="col-md-12">
         <div class="form-floating mt-2 mb-3">
             <select class="form-select" id="gameLevels">
@@ -36,8 +41,8 @@
         </div>
         <div id="game-over">
             <h3 id="score"></h3>
-            <button class="btn btn-primary" onclick="reloadPage()">Back</button>
-            <button class="btn btn-secondary" onclick="retryGame()">Try Again</button>
+            <button class="btn btn-primary" onclick="reloadPage()" title="go back"><i class="fa fa-home"></i></button>
+            <button class="btn btn-secondary" onclick="retryGame()" title="try again"><i class="fa fa-repeat" aria-hidden="true"></i></button>
         </div>
     </div>
     <script src="accests/js/game.js"></script>
