--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </nav>
     <div class="container">
         <div id="bomb-effect">
-            <div class="bomb-image"></div>
+            <div class="bomb-image" style="background: url('/accests/images/blast1.png') no-repeat center center;"></div>
         </div>
         
 
